// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`enhancers/with-form-submit withFormSubmit { submit } should dismiss notification before sending request 1`] = `
Array [
  Object {
    "type": "NOTIFICATION_DISMISS",
  },
]
`;

exports[`enhancers/with-form-submit withFormSubmit { submit } with failed request should display notification 1`] = `
Array [
  Object {
    "type": "NOTIFICATION_DISMISS",
  },
  Object {
    "data": Object {
      "message": "__MESSAGE__",
      "type": "ERROR",
    },
    "type": "NOTIFICATION_DISPLAY",
  },
]
`;

exports[`enhancers/with-form-submit withFormSubmit with message { submit } should display notification 1`] = `
Array [
  Object {
    "type": "NOTIFICATION_DISMISS",
  },
  Object {
    "data": Object {
      "message": "__MESSAGE__",
      "type": "SUCCESS",
    },
    "type": "NOTIFICATION_DISPLAY",
  },
]
`;
